@@ -36,6 +36,7 @@ public:
 		);
 
 	std::string name () const;
+	std::string json_name () const;
 	void run ();
 
 private:
