@@ -58,6 +58,10 @@ public:
 	string name () const {
 		return "";
 	}
+
+	string json_name () const {
+		return "";
+	}
 };
 
 BOOST_AUTO_TEST_CASE (job_manager_test)
